@@ -1,3 +1,12 @@
+2001-12-04 Alexander Rawass <alexannika@users.sourceforge.net>
+	
+	* interpreter:
+	  - scripts can have return values
+	  - global variables
+	  - while works
+	  - exec is checked for correct return type
+
+	
 2001-12-03 Alexander Rawass <alexannika@users.sourceforge.net>
 
 	* added more script tests
